adicionado horário testador

--- a/PBR/Testador/PBR_testador.tex
+++ b/PBR/Testador/PBR_testador.tex
@@ -13,6 +13,7 @@
 \begin{quotation}
 \newpage
 \section{Introdução}
+Início e término em 28/03/2016 15:30 - 17:00;
 \section{Casos de Teste}
 \subsection{Caso de teste - Requisito funcional 1}
 
