--- a/Laudo/Laudo.tex
+++ b/Laudo/Laudo.tex
@@ -24,7 +24,29 @@
 \item Faltam detalhes da documentação : Além do caso do funcionário, foi difícil definir alguns domínios quanto ao atributo de aptidão física.
 
 \item Tipos de dados não definidos explicitamente em alguns casos : Tipos das variáveis de atributo e qual seria o escopo de cada uma delas foram mal definidas.
-
 \end{itemize}
+\newpage
+\section*{Horas de Trabalho}
+\begin{itemize}
+\item Projetista:
+\begin{itemize}
+\item 22/03/2016: 15:00 - 15:34;
+\item 30/03/2016: 16:15 - 16:55.
+\end{itemize}
+A estimativa foi de 12  horas, entretanto ao que foi visto houve superestimação da carga horária.
+
+\item Testador: 
+\begin{itemize}
+\item 31/03/2016 15:30 - 17:00.
+\end{itemize}
+A estimativa foi de 8 horas, mas o tempo gasto foi muito menor do que o esperado.  
+
+\item Usuário:
+\begin{itemize}
+\item 02/04/2016: 13:00 - 13:30;
+\item 03/04/2016: 12:30 - 16:00.
+\end{itemize}
+\end{itemize}
+A estimativa foi de 3.5 horas, mas o tempo gasto foi maior do que o esperado. 
 
 \end{document}
