Oraganizando Laudo/Pasta

--- a/Laudo/Laudo.tex
+++ b/Laudo/Laudo.tex
@@ -10,7 +10,7 @@
 \begin{document}
 \maketitle
 \section*{Análise do Documento}
-\begin{itemize}
+\begin{enumerate}
 \item Dados pessoais dos funcionários não estabelecidos: Os dados pessoais dos trabalhadores do HemoSystem não foram definidos explicitamente na documentação, criando problemas de interpretação entre os analisadores.
 
 \item Interface entre os funcionários do sistema não está estabelecida: Dados referentes à coleta de sangue entre as fases de análise e exames não estão coerentes.
@@ -24,7 +24,7 @@
 \item Faltam detalhes da documentação : Além do caso do funcionário, foi difícil definir alguns domínios quanto ao atributo de aptidão física.
 
 \item Tipos de dados não definidos explicitamente em alguns casos : Tipos das variáveis de atributo e qual seria o escopo de cada uma delas foram mal definidas.
-\end{itemize}
+\end{enumerate}
 \newpage
 \section*{Horas de Trabalho}
 \begin{itemize}
