--- a/Plano de Projeto/pprojeto.tex
+++ b/Plano de Projeto/pprojeto.tex
@@ -182,7 +182,7 @@ A & Diagramas de Caso de Uso & - & 3h \\
 \hline 
 B & Diagramas de Classe & A & 3.5h \\ 
 \hline 
-C & Controle de Qualidade & A,B & 2.5h \\ 
+C & Controle de Qualidade & B & 2.5h \\ 
 \hline 
 D & Revisão dos Documentos & C & 1.25h \\
 \hline 
@@ -196,21 +196,21 @@ H & Criar métodos para & & \\ & lidar com o banco & F & 10h \\
 \hline 
 I & Criar métodos para & & \\ & interligar os & & \\ & módulos do sistema & O & 11h \\
 \hline 
-J & Definir métodos & & \\ & para registro dos doadores & E & 3h \\ 
+J & Definir métodos & & \\ & para registro dos doadores & E & 2.5h \\ 
 \hline 
-K & Definir métodos & & \\ & para registro dos exames & E &  3h \\ 
+K & Definir métodos & & \\ & para registro dos exames & E &  3.5h \\ 
 \hline 
 L & Definir métodos para verificar & & \\ & a segurança quanto & & \\ & às bolsas de sangue & E & 3h \\ 
 \hline 
-M & Definir as pesquisas  & & \\ & possíveis dentro do banco & G & 10h \\ 
+M & Definir as pesquisas  & & \\ & possíveis dentro do banco & G,H,R & 10h \\ 
 \hline 
-N & Criar Interface para & & \\ & os usuários & K & 5h \\ 
+N & Criar Interface para & & \\ & os usuários & K,J,L & 5h \\ 
 \hline 
 O & Conectar a interface com & & \\ & a aplicação e o banco de dados & N & 5h \\ 
 \hline 
-P & Testar funcinalidade dos métodos & O & 4h \\ 
+P & Testar funcinalidade dos métodos & I & 3h \\ 
 \hline 
-Q & Testar as entradas da interface & O & 4h \\ 
+Q & Testar as entradas da interface & I & 5h \\ 
 \hline 
 R & Testar a conexão com & & \\ & o Banco de dados & F & 1.5h \\ 
 \hline 
@@ -229,17 +229,15 @@ Primeira Seção:\\
 \item Início : 6:30 da manhã, 24/05
 \item Término : 11:00 da manhã, 24/05
 \end{itemize}
-\\
-Segunda Seção\\
+Segunda Seção:\\
 \begin{itemize}
 \item Início : 9:00 da manhã, 14/06
 \item Término : 11:00 da manhã 14/06
 \end{itemize}
-\\
-Terceira Seção\\
+Terceira Seção:\\
 \begin{itemize}
 \item Início : 14:00 da tarde, 14/06
-\item Término : 
+\item Término : 15:00 da tarde. 14/06
 \end{itemize}
 
 \end{document}
