Plano de projeto

--- a/PBR/Laudo - Gerente/Laudo.tex
+++ b/PBR/Laudo - Gerente/Laudo.tex
@@ -1,15 +1,40 @@
-\documentclass[12pt,a4paper,final]{report}
+\documentclass[12pt,a4paper,final]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{enumitem}
+\usepackage{amsmath}
 \usepackage[portuguese]{babel}
-\author{Gerente: Luan Bodner do Rosário}
-\title{Laudo - Projeto 1}
+\usepackage[utf8]{inputenc}
+\usepackage{pdfpages}
+\usepackage[portuguese]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{graphicx}
+\usepackage[left=2.5cm,right=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 \begin{document}
-\maketitle
-\section*{Análise do Documento}
+
+      	\begin{titlepage}
+       	\LARGE
+       	\begin{center}
+       	\vspace{5cm} 
+       	\textbf{Universidade Tecnológica Federal do Paraná \\ \vspace{1.8cm}}
+       	\includegraphics[scale=0.35]{logoutfpr.jpg} \\ \vspace{1.8cm}
+       	\textit{Engenharia de Software II} \vspace{2cm} \\
+       	Luan Bodner do Rosário \\ 1509950 \vspace{2cm} \\ 
+       	PROJETO 1 - LAUDO DO GERENTE PBR \vspace{2cm} \\
+      	Departamento de Ciência da Computação (DACOM) 
+       	
+   	\end{center}
+    \end{titlepage}	
+
+\tableofcontents
+\newpage
+\section{Análise do Documento}
 \begin{enumerate}
 \item Dados pessoais dos funcionários não estabelecidos: Os dados pessoais dos trabalhadores do HemoSystem não foram definidos explicitamente na documentação, criando problemas de interpretação entre os analisadores.
 
@@ -26,7 +51,7 @@
 \item Tipos de dados não definidos explicitamente em alguns casos : Tipos das variáveis de atributo e qual seria o escopo de cada uma delas foram mal definidas.
 \end{enumerate}
 \newpage
-\section*{Horas de Trabalho}
+\section{Horas de Trabalho}
 \begin{itemize}
 \item Projetista:
 \begin{itemize}
