--- a/Plano de Projeto/pprojeto.tex
+++ b/Plano de Projeto/pprojeto.tex
@@ -300,6 +300,11 @@ Quarta Seção:
 \caption{ Caminho Tarde}}
 \end{figure}
 \newpage
+
+\section{Tempo de Trabalho}
+
+Tempo para a diagramação do Projeto : 2 Horas.
+Os outros tempos foram marcados individualmente pela nova organização do projeto.
 \section{Bibliografia}
 http://www.workbreakdownstructure.com/\\
 http://projetoseti.com.br/criar-a-estrutura-analitica-do-projeto-eap/\\
